@@ -27,4 +27,18 @@
 			<version>${jose4j.version}</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+                    <maven.compiler.source>11</maven.compiler.source>
+                    <maven.compiler.target>11</maven.compiler.target>
+                    <compilerArgs>
+                		<arg>--add-exports</arg><arg>java.base/sun.security.rsa=ALL-UNNAMED</arg>
+                </compilerArgs>
+                </configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
